# subset-sum

./: ArrayAnalyzer.cpp  ArrayAnalyzer.hpp  CMakeLists.txt  compile.sh  main.cpp  main_app  partial_sum.cpp  partial_sum.hpp
